[gd_scene load_steps=3 format=3 uid="uid://b8k5peadgpw3"]

[ext_resource type="Script" path="res://examples/space_shooter/scripts/loadout_selection_ui.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://placeholder_music" path="res://examples/space_shooter/assets/audio/music/ship_select.ogg" id="2_music"]

[node name="LoadoutSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 50.0
grow_horizontal = 2
text = "CUSTOMIZE YOUR LOADOUT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShipPanel" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="ShipVBox" type="VBoxContainer" parent="HSplitContainer/ShipPanel"]
layout_mode = 2

[node name="ShipTitle" type="Label" parent="HSplitContainer/ShipPanel/ShipVBox"]
layout_mode = 2
text = "SHIP"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="HSplitContainer/ShipPanel/ShipVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ShipName" type="Label" parent="HSplitContainer/ShipPanel/ShipVBox"]
layout_mode = 2
text = "Ship Name"
horizontal_alignment = 1

[node name="ShipSprite" type="TextureRect" parent="HSplitContainer/ShipPanel/ShipVBox"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="ShipDescription" type="Label" parent="HSplitContainer/ShipPanel/ShipVBox"]
layout_mode = 2
text = "Description"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="HSplitContainer/ShipPanel/ShipVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="HSplitContainer/ShipPanel/ShipVBox"]
layout_mode = 2

[node name="Spacer3" type="Control" parent="HSplitContainer/ShipPanel/ShipVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ColorLabel" type="Label" parent="HSplitContainer/ShipPanel/ShipVBox"]
layout_mode = 2
text = "SHIP COLOR"
horizontal_alignment = 1

[node name="ColorGridContainer" type="GridContainer" parent="HSplitContainer/ShipPanel/ShipVBox"]
layout_mode = 2
columns = 5

[node name="IntensityLabel" type="Label" parent="HSplitContainer/ShipPanel/ShipVBox"]
layout_mode = 2
text = "Intensity: 1.0x"
horizontal_alignment = 1

[node name="IntensitySlider" type="HSlider" parent="HSplitContainer/ShipPanel/ShipVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
min_value = 0.5
max_value = 1.5
step = 0.05
value = 1.0

[node name="Spacer4" type="Control" parent="HSplitContainer/ShipPanel/ShipVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ShipNavigation" type="HBoxContainer" parent="HSplitContainer/ShipPanel/ShipVBox"]
layout_mode = 2
alignment = 1

[node name="PrevShip" type="Button" parent="HSplitContainer/ShipPanel/ShipVBox/ShipNavigation"]
layout_mode = 2
text = "< PREV"

[node name="Spacer" type="Control" parent="HSplitContainer/ShipPanel/ShipVBox/ShipNavigation"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="NextShip" type="Button" parent="HSplitContainer/ShipPanel/ShipVBox/ShipNavigation"]
layout_mode = 2
text = "NEXT >"

[node name="PilotPanel" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="PilotVBox" type="VBoxContainer" parent="HSplitContainer/PilotPanel"]
layout_mode = 2

[node name="PilotTitle" type="Label" parent="HSplitContainer/PilotPanel/PilotVBox"]
layout_mode = 2
text = "PILOT"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="HSplitContainer/PilotPanel/PilotVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="LicenseCard" type="TextureRect" parent="HSplitContainer/PilotPanel/PilotVBox"]
custom_minimum_size = Vector2(300, 180)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Spacer1b" type="Control" parent="HSplitContainer/PilotPanel/PilotVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PilotName" type="Label" parent="HSplitContainer/PilotPanel/PilotVBox"]
layout_mode = 2
text = "Pilot Name"
horizontal_alignment = 1

[node name="Archetype" type="Label" parent="HSplitContainer/PilotPanel/PilotVBox"]
layout_mode = 2
text = "Archetype"
horizontal_alignment = 1

[node name="Difficulty" type="Label" parent="HSplitContainer/PilotPanel/PilotVBox"]
layout_mode = 2
text = "Difficulty: MEDIUM"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="HSplitContainer/PilotPanel/PilotVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="PilotDescription" type="Label" parent="HSplitContainer/PilotPanel/PilotVBox"]
layout_mode = 2
text = "Description"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="HSplitContainer/PilotPanel/PilotVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="BonusesLabel" type="Label" parent="HSplitContainer/PilotPanel/PilotVBox"]
layout_mode = 2
text = "BONUSES"
horizontal_alignment = 1

[node name="BonusesContainer" type="VBoxContainer" parent="HSplitContainer/PilotPanel/PilotVBox"]
layout_mode = 2

[node name="Spacer4" type="Control" parent="HSplitContainer/PilotPanel/PilotVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="AbilityLabel" type="Label" parent="HSplitContainer/PilotPanel/PilotVBox"]
layout_mode = 2
text = "ABILITY"
horizontal_alignment = 1

[node name="AbilityDescription" type="Label" parent="HSplitContainer/PilotPanel/PilotVBox"]
layout_mode = 2
text = "Ability"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer5" type="Control" parent="HSplitContainer/PilotPanel/PilotVBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PilotNavigation" type="HBoxContainer" parent="HSplitContainer/PilotPanel/PilotVBox"]
layout_mode = 2
alignment = 1

[node name="PrevPilot" type="Button" parent="HSplitContainer/PilotPanel/PilotVBox/PilotNavigation"]
layout_mode = 2
text = "< PREV"

[node name="Spacer" type="Control" parent="HSplitContainer/PilotPanel/PilotVBox/PilotNavigation"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="NextPilot" type="Button" parent="HSplitContainer/PilotPanel/PilotVBox/PilotNavigation"]
layout_mode = 2
text = "NEXT >"

[node name="BottomBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -55.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="StartButton" type="Button" parent="BottomBar"]
custom_minimum_size = Vector2(250, 45)
layout_mode = 2
text = "START GAME"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_music")
autoplay = true
bus = &"Music"
